--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "@tanstack/react-table": "8.9.3",
     "@uiw/codemirror-theme-dracula": "4.23.12",
     "@uiw/react-codemirror": "4.23.12",
-    "axios": "1.7.9",
+    "axios": "1.9.0",
     "class-variance-authority": "0.6.1",
     "clsx": "1.2.1",
     "crypto-js": "4.2.0",
@@ -66,7 +66,7 @@
     "eslint": "8.43.0",
     "eslint-config-react-app": "7.0.1",
     "node-stdlib-browser": "1.2.0",
-    "postcss": "8.4.24",
+    "postcss": "8.4.31",
     "prettier": "2.8.8",
     "sass": "1.69.1",
     "tailwindcss": "3.3.2",
@@ -94,5 +94,6 @@
   },
   "lint-staged": {
     "./**/*.{js,css,ts,tsx}": "eslint --fix"
-  }
+  },
+  "packageManager": "yarn@4.9.2"
 }
